--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,7 +39,9 @@ javac.source=1.8
 javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    lib/junit-4.13.2.jar:\
+    lib/hamcrest-core-1.3.jar
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
